fix: create a new thread pool just for downsampling